Fix bug overflow cursor

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -17,6 +17,7 @@
 
 #box {
   position: relative;
+  overflow: hidden;
   color: white;
 }
 
